# refnx

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .requirements.txt  .travis.yml  .travis.yml.bak  CHANGELOG.txt  INSTALL_CONTRIBUTE.md  LICENSE  MANIFEST.in  README.md  _open_mp_helpers.py  appveyor.yml  appveyor.yml.bak  azure-pipelines.yml  azure-piplines.yml  build_manylinux_wheels.sh  check_wheels.sh  circle.yml  make.sh  meson.build  nsplice.py  publish_docs.sh  pyproject.toml  pytest.ini  readthedocs.yml  reduce.py  reduceData.cgi  reduceData.py  release_notes.txt  runtests.py  setup.cfg  setup.py  testimonials.bib  tox.ini  view.html  viewreduced.html  viewspectrum.cgi
benchmarks/: Benchmark.ipynb  __init__.py  asv.conf.json  run.py
data/: CurveFitter_EMCEE.ipynb  PLP0000709.nx.hdf  experiment.mtft  referenceAnalysisScript.py  reflectometry_analysis.ipynb
doc/: Makefile  NSF2.ipynb  analytical.ipynb  conf.py  emcee_pymc_dynesty.ipynb  energy_dispersive.ipynb  environment.yml  examples.rst  faq.rst  (+26 more)
refnx/: __init__.py  _version.py  conftest.py  meson.build
refnx/_lib/: __init__.py  _numdiff.py  _pymc.py  _pymc3.py  _qmc.py  _testutils.py  meson.build  util.py
refnx/_lib/emcee/: __init__.py  autocorr.py  ensemble.py
refnx/_lib/emcee/backends/: backend.py  hdf.py
refnx/_lib/emcee/moves/: de_snooker.py  red_blue.py
refnx/_lib/ptemcee/: __init__.py  chain.py  ensemble.py  mpi_pool.py  sampler.py  tests.py  util.py
refnx/_lib/test/: test_import.py  test_util.py
refnx/_lib/tests/: meson.build  test_import.py  test_util.py
refnx/analysis/: __init__.py  _reflect.py  bounds.py  curvefitter.py  meson.build  model.py  objective.py  parameter.py  reflect.py  reflect_model.py  structure.py
refnx/analysis/test/: NISTModels.py  e366r.txt  gsmear.py  resolution_comparison.ipynb  smearingprecision.py  test_bounds.py  test_curvefitter.py  test_globalfitting.py  test_model.py  test_objective.py  test_parameter.py  test_reflect.py  test_structure.py
refnx/analysis/tests/: NISTModels.py  e365r.txt  resolution_comparison.ipynb  test_curvefitter.py  test_globalfitting.py  test_model.py  test_objective.py
refnx/dataset/: __init__.py  data1d.py  meson.build  reflectdataset.py
refnx/dataset/test/: D2O45.txt  ORSO_data.ort  c_PLP0033831.txt  coef_c_PLP0000708.xml  d_a.txt  test_dataset.py  test_reflectdataset.py
refnx/dataset/tests/: dot.aft  dot.mft  dot.out  dot.refl  meson.build  test.orb  test_dataset.py
refnx/reduce/: Qtransforms.py  __init__.py  _auto_reduction.py  _tof_simulator.py  batchreduction.py  bounded_splines.py  event.py  manual_beam_finder.py  meson.build  nsplice.py  parabolic_motion.py  peak_utils.py  platypusnexus.py  platypusspectrum.py  processnexus.py  processplatypusnexus.py  rebin.py  reduce.py  xray.py
refnx/reduce/_app/: __init__.py  model.py  plot.py  view.py
refnx/reduce/_app/ui/: event.ui  manual_beam.ui  reduction_options.ui  slim.ui
refnx/reduce/batch_reduce/: batchreduction.py  rednhelpers.py  reduction.xlt  reduction_template.ipynb  xray_example.ipynb
refnx/reduce/test/: 11613_spectrum_slim.txt  180706_HA_DG2.xrdml  PLP0000708.nx.hdf  PLP0000710.nx.hdf  PLP0000711.nx.hdf  PLP0011613.nx.hdf  PLP0011641.nx.hdf  PLP0011658.nx.hdf  PLP0038417.nx.hdf  PLP0038418.nx.hdf  PLP0038420.nx.hdf  PLP0038421.nx.hdf  PLP0046853.nx.hdf  SPZ0000342.nx.hdf  background_subtract.npy  flood.h5  test_batch_reduce.py  test_batch_reduction.xls  test_event.py  test_nsplice.py  test_parabolic_motion.py  test_peak_utils.py  test_platypusnexus.py  test_rebin.py  test_reduce.py  test_xray.py
refnx/reduce/test/DAQ_2012-01-20T21-50-32/: CFG.xml
refnx/reduce/test/DAQ_2019-11-25T12-25-07/: CFG.xml
refnx/reduce/test/DAQ_2019-11-25T12-25-07/DATASET_0/: HDS_P0.nx.hdf
refnx/reduce/tests/: test_batch_reduce.py  test_event.py  test_parabolic_motion.py  test_peak_utils.py  test_platypusnexus.py  test_reduce.py  test_xray.py
refnx/reflect/: __init__.py  _code_fragment.py  _creflect.pxd  _functional_form.py  _interactive_modeller.py  _jax_compiler.py  _jax_reflect.py  _lipid.py  _mdsimulation.py  _numba_reflect.py  _polarised_reflect_model.py  _reflect.py  abeles_pyopencl.cl  interface.py  meson.build  reflect_model.py  simulation.py  spline.py  structure.py
refnx/reflect/_app/: SLD_calculator_view.py  __init__.py  _lipid_leaflet.py  _mcmc.py  _optimisation_parameters.py  _spline.py  dataobject.py  datastore.py  datastore_gui_model.py  globalfitting_gui_model.py  graphproperties.py  limits_gui_model.py  lipid_leaflet.py  lipids.json  paramsstore_gui_model.py  reflectivity_parameters_gui_model.py  resources.qrc  resources_rc.py  treeview_gui_model.py  view.py
refnx/reflect/_app/test/: test_app.py  test_graphproperties.py
refnx/reflect/_app/tests/: test_app.py
refnx/reflect/_app/ui/: about.ui  data_object_selector.ui  lipid_leaflet.ui  motofit.ui  optimisation.ui  process_mcmc.ui  qrangedialog.ui  sample_mcmc.ui  spline.ui
refnx/reflect/_app/ui/licences/: about  matplotlib  numpy  pyparsing  pyqt5  pyqt6  pyside6  python-dateutil  qt  refl1d  scipy
refnx/reflect/extra/: __init__.py  _jax_compiler.py  _jax_lipid.py  _jax_util.py  _pymc.py  _util.py
refnx/reflect/test/: c_PLP0011859_q.txt  e361r.txt  gsmear.py  mdsim_test.lgt  mdsimulation.lgt  refl1d.npy  smearingprecision.py  test__code_fragment.py  test__interactive_modeller.py  test__lipid.py  test_functional_form.py  test_interface.py  test_mdsimulation.py  test_reflect.py  test_simulation.py  test_spline.py  test_structure.py  theoretical.txt
refnx/reflect/tests/: .Quartz_data.txt  absorption.npy  gsmear.py  sample_model_example_2.yml  smearingprecision.py  test__code_fragment.py  test__interactive_modeller.py  test__lipid.py  test_functional_form.py  test_interface.py  test_jax.py  test_reflect.py  test_structure.py
refnx/util/: ErrorProp.py  __init__.py  _resolution_kernel.py  general.py  meson.build  nsplice.py  quickplot.py
refnx/util/test/: test_ErrorProp.py  test_general.py  test_nsplice.py
refnx/util/tests/: meson.build  test_ErrorProp.py  test_general.py  test_nsplice.py
(+364 files in other folders)
