[metadata]
name = refnx
description = Neutron and X-ray Reflectometry Analysis
author = Andrew Nelson
author_email = andyfaff+refnx@gmail.com
license = BSD
url = https://github.com/refnx/refnx
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
platforms =
    Windows
    Linux
    Solaris
    Mac OS-X
    Unix
python_requires = ">=3.7"

[options]
setup_requires =
    cython
    numpy
    oldest-supported-numpy

install_requires =
    numpy
    scipy

tests_require =
    pytest
    uncertainties

[options.extras_require]
all = IPython
      ipywidgets
      traitlets
      matplotlib
      xlrd
      h5py
      tqdm
      pymc3
      theano
      attrs
      pandas
      pyparsing
      periodictable
      pyqt5
      corner

[options.entry_points]
gui_scripts =
    refnx = refnx.reflect:main
