[metadata]
name = refnx
description = Neutron and X-ray Reflectometry Analysis
author = Andrew Nelson
author_email = andyfaff+refnx@gmail.com
license = BSD
url = https://github.com/refnx/refnx
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
platforms =
    Windows
    Linux
    Solaris
    Mac OS-X
    Unix
python_requires = ">=3.8"
project_urls =
    Bug Tracker = https://github.com/refnx/refnx/issues
    Documentation = https://refnx.readthedocs.io/en/latest/
    Source Code = https://github.com/refnx/refnx


[options]
install_requires =
    numpy
    scipy
    orsopy

packages =
     refnx
     refnx._lib
     refnx._lib.test
     refnx._lib.emcee
     refnx._lib.emcee.backends
     refnx._lib.emcee.moves
     refnx._lib.ptemcee
     refnx.analysis
     refnx.analysis.test
     refnx.analysis.test.NIST_STRD
     refnx.dataset
     refnx.dataset.test
     refnx.reduce
     refnx.reduce._app
     refnx.reduce._app.ui
     refnx.reduce.batch_reduce
     refnx.reduce.test
     refnx.reflect
     refnx.reflect._app
     refnx.reflect._app.icons
     refnx.reflect._app.test
     refnx.reflect._app.ui
     refnx.reflect._app.ui.licences
     refnx.reflect.test
     refnx.util
     refnx.util.test

tests_require =
    pytest
    uncertainties

[options.extras_require]
all = IPython
      ipywidgets
      traitlets
      matplotlib
      xlrd
      h5py
      tqdm
      pymc
      pytensor
      theano
      attrs
      pandas
      pyparsing
      periodictable
      pyqt6
      qtpy
      corner

[options.entry_points]
gui_scripts =
    refnx = refnx.reflect:main
